--- a/index.html
+++ b/index.html
@@ -259,6 +259,15 @@
     .about-list li {
       margin-bottom: 0.3rem;
     }
+        /* ========================== 返回调查按钮 ========================== */
+    .return-survey { text-align: center; margin: 20px 0 60px 0; }
+    .return-survey button {
+      display: inline-block; padding:10px 25px; background:#f5f5f7; color:#777; text-decoration:none; border:none; 
+      border-radius:5px; font-size:0.9rem; font-weight:normal;
+    }
+    .return-survey button:hover {opacity:.9;}
+        /* ✅ 新增：默认隐藏返回按钮 */
+    #returnBtn {display: none;}
 
   </style>
 </head>
